# FarOS

./: .gitignore  CMakeLists.txt  README.md  build.py
drivers/boards/brandy_evb/: CMakeLists.txt
drivers/boards/brandy_evb/board_config/: board_evb.h
drivers/boards/brandy_evb/linker/: CMakeLists.txt
drivers/boards/brandy_evb/linker/recovery/: CMakeLists.txt  acore.prelds
drivers/boards/brandy_evb/linker/ssb/: CMakeLists.txt  linker.prelds
drivers/boards/brandy_evb/linker/standard/: CMakeLists.txt  acore.prelds
drivers/boards/brandy_evb/memory_config/include/: flash_16M.h  flash_8M.h  memory_config.h  memory_config_common.h  psram.h  psram_16.h  psram_32.h  ssb_config_common.h
drivers/boards/brandy_evb/product/: product.h  product_evb4_standard.h  product_evb_standard.h  product_none.h
drivers/chips/: CMakeLists.txt
drivers/chips/brandy/: CMakeLists.txt
drivers/chips/brandy/arch/riscv/riscv70/: arch_encoding.h  interrupt.c  interrupt_handler.c  interrupt_handler.h  oam_trace.c  oam_trace.h  vectors.s
drivers/chips/brandy/clocks/drivers/acore/: clocks.c  clocks.h  clocks_config.h  clocks_config_priv.c  clocks_config_priv.h
drivers/chips/brandy/clocks/hal/: hal_clocks.c  hal_clocks.h  hal_clocks_app.c  hal_clocks_app.h  hal_clocks_app_priv.c  hal_clocks_app_priv.h  hal_clocks_bt.h  hal_clocks_display.h  hal_clocks_glb.c  hal_clocks_glb.h  hal_clocks_sdio.c  hal_clocks_sdio.h  hal_cpu_clocks.c  hal_cpu_clocks.h
drivers/chips/brandy/clocks_core/hal/: hal_32k_clock.c  hal_32k_clock.h
drivers/chips/brandy/config/: otp_map.h  pmp_config.c  pmp_config.h
drivers/chips/brandy/include/: chip_core_definition.h  chip_core_irq.h  core.h  platform_core.h
drivers/chips/brandy/interrupt/: interrupt_adapter.c  interrupt_os_adapter.c  vectors.c  vectors.h
drivers/chips/brandy/pmu/hal/: hal_pmu_cmu.c  hal_pmu_cmu.h  hal_pmu_interrupt.c  hal_pmu_interrupt.h  hal_pmu_ldo.c  hal_pmu_ldo.h  hal_pmu_peripheral.h  hal_pmu_peripheral_app.c  hal_pmu_peripheral_app.h  hal_pmu_peripheral_bt.h  hal_pmu_pg.c  hal_pmu_pg.h  hal_pmu_vdd.c  hal_pmu_vdd.h
drivers/chips/brandy/porting/: CMakeLists.txt
drivers/chips/brandy/porting/adc/: adc_porting.c
drivers/chips/brandy/porting/button/: CMakeLists.txt  button_porting.c
drivers/chips/brandy/porting/calendar/: CMakeLists.txt  calendar_porting.c
drivers/chips/brandy/porting/dma/: dma_porting.c
drivers/chips/brandy/porting/flash/: CMakeLists.txt  flash_porting.c
drivers/chips/brandy/porting/gpio/: gpio_porting.c
drivers/chips/brandy/porting/i2c/: CMakeLists.txt  i2c_porting.c
drivers/chips/brandy/porting/include/: adc_porting.h  button_porting.h  calendar_porting.h  dma_porting.h  efuse_porting.h  flash_porting.h  gpio_porting.h  i2c_porting.h  klad_porting.h  pal_sec_config_port.h  pinctrl_porting.h  pwm_porting.h  rtc_porting.h  sha_porting.h  spi_porting.h  systick_porting.h  tcxo_porting.h  timer_porting.h  trng_porting.h  uart_porting.h  watchdog_porting.h
drivers/chips/brandy/porting/liteos/: CMakeLists.txt
drivers/chips/brandy/porting/mem_monitor/: CMakeLists.txt  mem_monitor_porting.c  mem_monitor_porting.h
drivers/chips/brandy/porting/pinctrl/: CMakeLists.txt  pinctrl_porting_brandy.c
drivers/chips/brandy/porting/pmp/: CMakeLists.txt  pmp_porting.c
drivers/chips/brandy/porting/pwm/: CMakeLists.txt  pwm_porting.c
drivers/chips/brandy/porting/rtc_unified/: CMakeLists.txt  rtc_porting.c
drivers/chips/brandy/porting/spi/: CMakeLists.txt  spi_porting.c
drivers/chips/brandy/porting/systick/: systick_porting.c
drivers/chips/brandy/porting/tcxo/: tcxo_porting.c
drivers/chips/brandy/porting/timer/: CMakeLists.txt  timer_porting.c
drivers/chips/brandy/porting/uart/: CMakeLists.txt  uart_porting.c
drivers/chips/brandy/porting/watchdog/: watchdog_porting.c
drivers/chips/brandy/porting/xip/: xip_porting.c
drivers/drivers/driver/audio/: CMakeLists.txt
drivers/drivers/driver/audio/include/: soc_uapi_acodec.h  soc_uapi_adec.h  soc_uapi_adp.h  soc_uapi_aef.h  soc_uapi_aenc.h  soc_uapi_ai.h  soc_uapi_anc.h  soc_uapi_audio.h  soc_uapi_audio_errno.h  soc_uapi_audio_sys.h  soc_uapi_dpm.h  soc_uapi_sea.h  soc_uapi_sound.h  soc_uapi_vad.h  soc_uapi_vendor.h
drivers/drivers/driver/audio/source/: CMakeLists.txt
interim_binary/brandy/libs/bt/: CMakeLists.txt
kernel/freertos/: CMakeLists.txt
kernel/freertos/FreeRTOS/: CMakeLists.txt
kernel/freertos/FreeRTOS/Arch/RISC-V/: cache.c  pmp.c  port.c  portASM.S  portmacro.h
kernel/freertos/FreeRTOS/Arch/include/: arch_base.h  hal_hwi.h
kernel/freertos/FreeRTOS/Kernel/: hwi.c  print.c
kernel/freertos/FreeRTOS/Kernel/include/: freertos_typedef.h  hwi.h  print.h
kernel/freertos/cmsis_rtos/: CMakeLists.txt
kernel/freertos/debug/: CMakeLists.txt  debug_cmd.c  debug_cmd.h  os_handler.c  os_handler.h
kernel/freertos/include/cmsis/: cmsis_os.h
kernel/freertos/include/utils/securec/: securec.h
kernel/freertos/utils/: CMakeLists.txt
kernel/freertos/utils/libc/: CMakeLists.txt  libc_src.cmake
kernel/freertos/utils/libm/: CMakeLists.txt
kernel/freertos/utils/posix/: CMakeLists.txt  readme.txt
kernel/freertos/utils/securec/: CMakeLists.txt
kernel/freertos/utils/securec/include/: README.md  securectype.h
kernel/freertos/utils/securec/src/: securecutil.c
kernel/freertos/utils/xlt_mem/: CMakeLists.txt  README.md
kernel/freertos/utils/xlt_mem/include/: xlt_config.h  xlt_errno.h  xlt_list.h  xlt_memory.h  xlt_slab.h  xlt_typedef.h
kernel/liteos/liteos_v207.1.0/: CMakeLists.txt  show_menuconfig.py
kernel/liteos/liteos_v207.1.0/Huawei_LiteOS/: .config
kernel/liteos/liteos_v207.1.0/Huawei_LiteOS/fs/: CMakeLists.txt
kernel/liteos/liteos_v207.1.0/Huawei_LiteOS/lib/: CMakeLists.txt  api_inc.cmake
kernel/liteos/liteos_v207.1.0/Huawei_LiteOS/shell/: api_inc.cmake
kernel/liteos/liteos_v207.1.0/Huawei_LiteOS/targets/: Kconfig  Kconfig.aiot  Kconfig.energy  Kconfig.hq  Kconfig.shc
protocol/: CMakeLists.txt
protocol/bt/host/: CMakeLists.txt
protocol/bt/host/bt/: CMakeLists.txt
protocol/bt/host/bt/bts/: CMakeLists.txt
(+2924 files in other folders)
