#===============================================================================
# @brief    cmake file
# Copyright (c) @CompanyNameMagicTag 2022-2022. All rights reserved.
#===============================================================================
add_subdirectory(ssb)
add_subdirectory(standard)
add_subdirectory(recovery)