#===============================================================================
# @brief    cmake make file
# Copyright (c) @CompanyNameMagicTag 2022-2022. All rights reserved.
#===============================================================================
if("${CHIP}" STREQUAL "brandy")
    add_subdirectory_if_exist(bt_sample)
    add_subdirectory_if_exist(bt_audio_wrapper)
    file(GLOB_RECURSE SOURCES brandy_service/*.c)
    list(LENGTH SOURCES SOURCES_NUM)
    if(NOT ${SOURCES_NUM} EQUAL 0)
        add_subdirectory_if_exist(bg_common)
        add_subdirectory_if_exist(brandy_service)
        add_subdirectory_if_exist(sdk)
    else()
        if("SUPPORT_BLE" IN_LIST DEFINES AND "SUPPORT_BREDR" IN_LIST DEFINES)
            set(COMPONENT_LIST "bt_host_brandy_service" "bt_host_sdk")
        else()
            set(COMPONENT_LIST "bt_host_brandy_service" "bt_host_sdk")
        endif()
        foreach(COMPONENT ${COMPONENT_LIST})
            set(COMPONENT_NAME ${COMPONENT})
            if (NOT ${COMPONENT_NAME} IN_LIST TARGET_COMPONENT)
                continue()
            endif()
            if("SUPPORT_BLE" IN_LIST DEFINES AND "SUPPORT_BREDR" IN_LIST DEFINES)
                if("MEMORY_MINI" IN_LIST DEFINES)
                    set(LIBRARY_OUTPUT_PATH ${BIN_DIR}/${CHIP}/libs/bt/${BOARD}_${APPLICATION}/${OS}/mini/br)
                else()
                    set(LIBRARY_OUTPUT_PATH ${BIN_DIR}/${CHIP}/libs/bt/${BOARD}_${APPLICATION}/${OS}/br)
                endif()
            else()
                if("MEMORY_MINI" IN_LIST DEFINES)
                    set(LIBRARY_OUTPUT_PATH ${BIN_DIR}/${CHIP}/libs/bt/${BOARD}_${APPLICATION}/${OS}/mini/ble)
                else()
                    set(LIBRARY_OUTPUT_PATH ${BIN_DIR}/${CHIP}/libs/bt/${BOARD}_${APPLICATION}/${OS}/ble)
                endif()
            endif()
            find_library(LIBS${COMPONENT_NAME} "lib${COMPONENT_NAME}.a" ${LIBRARY_OUTPUT_PATH})
            target_link_libraries(${TARGET_NAME} PRIVATE -Wl,--whole-archive  ${LIBS${COMPONENT_NAME}} -Wl,--no-whole-archive )
            build_component()
        endforeach()
    endif()
endif()